--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+todolist/.env
 .venv
 env/
 venv/
@@ -279,7 +279,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+todolist/.env
 .venv
 env/
 venv/
